2011-07-13  Andrew John Hughes  <ahughes@redhat.com>

	Bump to b147.
	* Makefile.am:
	(OPENJDK_VERSION): Bumped to b147.
	(CORBA_CHANGESET): Updated.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(JAXWS_DROP_ZIP): Likewise.
	(JAXWS_DROP_SHA256SUM): Likewise.
	(JAXP_DROP_ZIP): Likewise.
	(JAXP_DROP_SHA256SUM): Likewise.
	(bootstrap-directory-stage1): Use our
	script for javah.
	* configure.ac:
	Generate script for javah.
	* javah.in: Filter -X commands from javah.
	* patches/boot/ecj-autoboxing.patch:
	Updated to apply against b147.
	* patches/boot/ecj-diamond.patch,
	* patches/boot/ecj-stringswitch.patch:
	Likewise and add new cases.

2011-07-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(CORBA_SHA256SUM): Updated after removal of
	.hg_archival.txt which causes checksum breakage.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.

2011-07-08  Xerxes Rånby  <xerxes@zafena.se>

	JamVM: Is self-hosting.
	* patches/jamvm/remove-sun.misc.Perf-debug-code.patch: New patch.
	* Makefile.am:
	(ICEDTEA_PATCHES): Apply new patch when building JamVM.
	* HACKING: Updated.
	* NEWS: Updated.

2011-07-05  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/751:
	(ICEDTEA_BOOT_PATCHES): Make application of
	javah.patch dependent on javah presenting
	with bug 40188.

2011-07-05  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/751
	* Makefile.am:
	(ICEDTEA_BOOT_PATCHES): Include compile-for-7
	patch if javac supports diamond.  This makes